#9 SelectCelebFragment, HomeFragment 디자인 변경

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,18 +18,19 @@
             android:layout_width="0dp"
             android:layout_height="254dp"
             android:orientation="vertical"
-            android:layout_margin="8dp"
-            android:background="@drawable/rounded_box_shape"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/combined_home_drawble"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHeight_default="percent">
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintBottom_toTopOf="@+id/btnList">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_gravity="right"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                android:src="@color/black"
+                android:src="@drawable/celeb_change"
                 android:layout_width="40dp"
                 android:layout_height="40dp"/>
 
@@ -44,16 +45,16 @@
                 android:layout_height="wrap_content"
                 android:text="@{selectCelebName}"
                 android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="28sp"
+                android:textColor="@color/white"
+                android:textSize="18sp"
                 android:layout_marginStart="20dp"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="인기소식을 확인해 보세요"
-                android:textColor="@color/black"
-                android:textSize="18sp"
+                android:text="셀럽의 인기소식을 확인해 보세요"
+                android:textColor="@color/white"
+                android:textSize="15sp"
                 android:layout_marginStart="20dp"
                 android:layout_marginBottom="20dp"/>
 
@@ -224,7 +225,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/rankBtn"
-            android:text="인기소식 확인해 보세요"
+            android:text="*인기소식 확인해 보세요"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -233,11 +234,18 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="212dp"
+            android:id="@+id/homePopularRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintVertical_bias="0.1"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="horizontal"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv2"/>
+            tools:listitem="@layout/home_popular_item"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv2"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
