--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -68,7 +68,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
             android:background="@drawable/rounded_box_shape"
-            android:backgroundTint="#43D681"
+            android:backgroundTint="@color/white"
             android:padding="14dp"
             android:text="고맙습니다."
             android:textColor="@android:color/white"
