--- a/app/src/main/res/layout/community_item.xml
+++ b/app/src/main/res/layout/community_item.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/rounded_box_shape"
     android:layout_marginBottom="10dp"
-    android:backgroundTint="@color/myCelebChatBackground"
+    android:backgroundTint="@color/white"
     android:paddingStart="20dp"
     android:paddingEnd="20dp"
     android:paddingTop="10dp"
@@ -16,7 +16,6 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_box_shape"
-        android:backgroundTint="@color/cardview_dark_background"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,9 +23,8 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/baseline_person_24"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
