--- a/app/src/main/res/layout/fragment_ai_chat.xml
+++ b/app/src/main/res/layout/fragment_ai_chat.xml
@@ -3,9 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".main.view.AiChatFragment">
-    <data>
-
-    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -18,7 +15,7 @@
             android:src="@drawable/baseline_person_24"
             app:tint="@color/black"
             app:civ_border_width="2dp"
-            app:civ_border_color="#D7DAE3"
+            app:civ_border_color="@color/myCelebHotPink"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +27,7 @@
             android:id="@+id/chatConstraint1"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/myCelebChatBackground"
+            android:background="#F2F2F2"
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,34 +41,36 @@
                 android:orientation="horizontal"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/rounded_box_shape"
+                android:backgroundTint="@color/myCelebBoxBackground"
                 android:padding="10dp"
                 android:layout_marginTop="15dp"
                 app:layout_constraintTop_toTopOf="@+id/chatConstraint1"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/baseline_calendar_today_24"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/aiChatRecyclerView">
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/aiChatDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2023년 8월 29일 화요일"/>
+                    android:text="2023년 8월 29일 화요일"
+                    android:textColor="@color/myCelebTextHint"
+                    android:drawableStart="@drawable/baseline_calendar_today_24"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:textStyle="bold"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/aiChatRecyclerView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginTop="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/aiChatDateLayout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/ll_layout_bar2"
-                tools:listitem="@layout/message_item"
-                />
+                tools:listitem="@layout/message_item"/>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/ll_layout_bar2"
@@ -79,22 +78,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:background="@color/myCelebChatBackground"
+                android:backgroundTint="@color/white"
                 android:orientation="vertical"
+                android:layout_marginTop="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/aiChatRecyclerView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
-
-                <TextView
-                    android:id="@+id/tvState"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="상태 체크"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/btnSpeech" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/ll_layout_bar"
@@ -108,10 +98,11 @@
                         android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:textSize="18sp"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:background="@drawable/rounded_box_shape"
+                        android:backgroundTint="@color/myCelebHotPink"
                         android:src="@drawable/baseline_mic_none_24"
-                        android:tint="@android:color/white"
+                        android:tint="@color/white"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -127,10 +118,11 @@
                         android:paddingStart="10dp"
                         android:layout_weight=".5"
                         android:background="@drawable/rounded_box_shape"
-                        android:backgroundTint="@color/white"
+                        android:backgroundTint="@color/myCelebBoxBackground"
                         android:layout_gravity="center_vertical"
-                        android:hint="당신의 샐럽과 자유롭게 대화해보세요"
+                        android:hint="셀럽과 자유롭게 대화해보세요..."
                         android:textSize="14sp"
+                        android:textColor="@color/myCelebTextHint"
                         android:padding="10dp"
                         android:singleLine="true" />
 
@@ -141,7 +133,8 @@
                         android:layout_margin="10dp"
                         android:layout_weight="1"
                         android:background="@drawable/rounded_box_shape"
-                        android:text="Send"
+                        android:backgroundTint="@color/myCelebHotPink"
+                        android:text="전송"
                         android:textColor="@android:color/white" />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
