--- a/app/src/main/res/layout/fragment_community_home.xml
+++ b/app/src/main/res/layout/fragment_community_home.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/rounded_box_shape"
-        android:backgroundTint="#C6C9D0"
+        android:backgroundTint="@color/myCelebPurple"
         android:padding="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/communityTxt1"
-        android:text="인기 커뮤니티"
+        android:text="*인기 커뮤니티"
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
@@ -53,6 +53,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_search_shape"
+        android:backgroundTint="@color/myCelebBoxBackground"
+        app:queryBackground="@null"
         android:layout_marginTop="10dp"
         app:iconifiedByDefault="false"
         app:queryHint="원하는 셀럽을 검색해봐요"
@@ -63,6 +65,8 @@
     <TextView
         android:id="@+id/communityTxt2"
         android:text="높은 참여율순"
+        android:textColor="@color/myCelebThinPink"
+        android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -73,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_keyboard_arrow_down_24"
-        android:tint="@color/black"
+        android:tint="@color/myCelebThinPink"
         android:layout_marginTop="10dp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
