--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:background="@color/myCelebChatBackground"
+        android:background="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -22,6 +22,7 @@
             android:text="마이 셀럽 랭킹"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintHorizontal_bias="0"
@@ -33,16 +34,17 @@
             android:id="@+id/celebProfile"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:src="@drawable/baseline_person_24"
+            android:src="@drawable/chaeunwoo"
             app:tint="@color/black"
             app:civ_border_width="2dp"
-            app:civ_border_color="#D7DAE3"
+            app:civ_border_color="@color/myCelebThinPink"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rankTxt1" />
+            app:layout_constraintTop_toBottomOf="@+id/rankTxt1"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
@@ -58,7 +60,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/myCelebRank"
                 android:text="6위"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,11 +73,11 @@
                 android:id="@+id/myCelebRankNum"
                 android:text="1"
                 android:textSize="15sp"
-                android:textColor="@color/black"
+                android:textColor="@color/myCelebHotPink"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/popularity_rank"
-                android:drawableTint="@color/black"
+                android:drawableTint="@color/myCelebHotPink"
                 android:layout_marginStart="7dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/myCelebRank"
@@ -87,6 +89,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="차은우"
+                android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 app:layout_constraintHorizontal_bias="0"
@@ -99,6 +102,7 @@
                 android:text="#연하 #20대 #동안"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:textSize="15sp"
                 app:layout_constraintTop_toBottomOf="@+id/myCelebName"
                 app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +111,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:text="2543"
                 android:drawableEnd="@drawable/circle"
+                android:textColor="@color/white"
                 android:drawablePadding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
