--- a/app/src/main/res/layout/fragment_audio_home.xml
+++ b/app/src/main/res/layout/fragment_audio_home.xml
@@ -23,7 +23,7 @@
 
             <TextView
                 android:id="@+id/audioHomeTxt1"
-                android:text="추천 오디오"
+                android:text="*추천 오디오"
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:layout_marginStart="20dp"
@@ -38,11 +38,13 @@
             <TextView
                 android:id="@+id/audioHomeTxt2"
                 android:text="셀럽의 목소리로 마음의 안정 찾기"
+                android:textColor="@color/myCelebTextHint"
                 android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintBottom_toTopOf="@+id/audioBookViewPager"
                 app:layout_constraintTop_toBottomOf="@+id/audioHomeTxt1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -87,11 +89,14 @@
                 android:id="@+id/audioHomeTxt4"
                 android:text="모두 보기"
                 android:textSize="17sp"
+                android:textColor="@color/myCelebTextHint"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
+                android:drawableTint="@color/myCelebTextHint"
+                app:layout_constraintBottom_toTopOf="@+id/celebSearch"
                 app:layout_constraintHorizontal_bias="1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/audioHomeTxt3"
@@ -101,7 +106,9 @@
                 android:id="@+id/celebSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:queryBackground="@null"
                 android:background="@drawable/rounded_search_shape"
+                android:backgroundTint="@color/myCelebBoxBackground"
                 app:iconifiedByDefault="false"
                 app:queryHint="찾고 계신 오디오북을 검색해봐요"
                 android:layout_marginTop="15dp"
@@ -115,6 +122,8 @@
                 android:id="@+id/audioHomeTxt5"
                 android:text="높은 조회순"
                 android:textSize="15sp"
+                android:textColor="@color/myCelebThinPink"
+                app:drawableTint="@color/myCelebThinPink"
                 android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
                 android:drawableTint="@color/black"
                 android:layout_width="wrap_content"
