--- a/app/src/main/res/drawable/book_item_border.xml
+++ b/app/src/main/res/drawable/book_item_border.xml
@@ -2,11 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <solid android:color="@null"/>
-    <corners android:bottomRightRadius="20dp"
-        android:bottomLeftRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"/>
     <stroke
         android:width="1dp"
-        android:color="#C6C9D0" />
+        android:color="@color/myCelebTextHint" />
 </shape>
