--- a/app/src/main/res/layout/fragment_audio_book.xml
+++ b/app/src/main/res/layout/fragment_audio_book.xml
@@ -35,7 +35,7 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/audioBookImg"
-                android:src="@drawable/granlagan"
+                android:src="@drawable/last_leaf"
                 android:scaleType="fitXY"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
